fix: Issue where blockquote is not visible

--- a/frontend/src/styles/base/_ckeditor.scss
+++ b/frontend/src/styles/base/_ckeditor.scss
@@ -20,6 +20,7 @@
 
 .ck-content > blockquote {
   font-style: revert !important;
+  overflow: visible !important;
 }
 
 .ck-content > ol,
